# qt_cmake_mac

./: CMakeLists.txt  README.md
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
